--- a/book-service-prod.properties
+++ b/book-service-prod.properties
@@ -9,3 +9,5 @@ spring.jpa.database-platform=org.hibernate.dialect.MySQL5Dialect
 spring.jpa.properties.ddl-auto=create-drop
 spring.jpa.properties.hibernate.show_sql=true
 spring.jpa.properties.hibernate.format_sql=true
+#ps8
+spring.datasource.hikari.maximum-pool-size=10
